tests/NormalTests/paczka1/fuzzy1/42389673.err
Error in line 11: A746 S628 44,4
Error in line 25: A746 S628 40,7
Error in line 16: WLlt4x9 S832 16,4
